refactor(models): update ent models, update swagger docs
